# program_guide_tvmaze_api

./: 2.0-upgrade.sql  Cargo.toml  LICENSE  README.md  config.toml
src/: lib.rs  main.rs  program_guide.rs  tvmaze.rs
