[package]
name = "program_guide_tvmaze_api"
version = "0.1.0"
authors = ["Gunter Wambaugh <gunter.wambaugh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4",  features = ["blocking"] }
serde_json = "1.0.48"
mysql = "18.0.0"
quote = "=1.0.2"
#docopt = "1.1.0"
serde = { version = "1.0.104", features = ["derive"] }