[package]
name = "program_guide_tvmaze_api"
version = "0.2.1"
authors = ["Gunter Wambaugh <gunter.wambaugh@gmail.com>"]
edition = "2018"

[dependencies]
config = "0.10"
env_logger = "0.7"
exitcode = "1.1"
log = "0.4"
mysql = "18.0.0"
reqwest = { version = "0.10", features = ["blocking", "json", "gzip"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }